<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="logging"
        app:title="@string/termux_logging_header">

        <ListPreference
            app:defaultValue="1"
            app:key="log_level"
            app:title="@string/termux_log_level_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="terminal_view_key_logging_enabled"
            app:summaryOff="@string/termux_terminal_view_key_logging_enabled_off"
            app:summaryOn="@string/termux_terminal_view_key_logging_enabled_on"
            app:title="@string/termux_terminal_view_key_logging_enabled_title" />

        <SwitchPreferenceCompat
            app:key="crash_report_notifications_enabled"
            app:summaryOff="@string/termux_crash_report_notifications_enabled_off"
            app:summaryOn="@string/termux_crash_report_notifications_enabled_on"
            app:title="@string/termux_crash_report_notifications_enabled_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="session_layer"
        app:title="@string/fable_session_layer_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="fable_session_rust_enabled"
            app:summary="@string/fable_session_rust_enabled_summary"
            app:title="@string/fable_session_rust_enabled_title" />

    </PreferenceCategory>

</PreferenceScreen>
