<com.gph.fable.app.terminal.FableActivityRootView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fable_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/activity_fable_root_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="0dp"
        android:orientation="vertical">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/terminal_toolbar_view_pager"
            android:layout_height="match_parent">

            <com.gph.fable.app.terminal.FableTerminalView
                android:id="@+id/fable_terminal_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UnusedAttribute">

                <com.gph.fable.view.FableInputTerminalView
                    android:id="@+id/terminal_input_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:defaultFocusHighlightEnabled="false"
                    android:focusableInTouchMode="true"
                    android:scrollbarThumbVertical="@drawable/terminal_scroll_shape"
                    android:scrollbars="vertical" />
            </com.gph.fable.app.terminal.FableTerminalView>

            <LinearLayout
                android:id="@+id/left_drawer"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical"
                android:background="?attr/fableActivityDrawerBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/settings_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_settings"
                        android:background="@null"
                        android:contentDescription="@string/action_open_settings"
                        app:tint="?attr/fableActivityDrawerImageTint" />
                </LinearLayout>

                <ListView
                    android:id="@+id/terminal_sessions_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="top"
                    android:layout_weight="0.65"
                    android:choiceMode="singleChoice"
                    android:longClickable="true" />

                <TextView
                    android:id="@+id/recent_sessions_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/recent_sessions_title"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="12sp"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded" />

                <ListView
                    android:id="@+id/recent_sessions_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.35"
                    android:choiceMode="singleChoice"
                    android:longClickable="true"
                    android:visibility="gone" />

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/toggle_keyboard_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_toggle_soft_keyboard" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/new_session_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_new_session" />
                </LinearLayout>
            </LinearLayout>

        </androidx.drawerlayout.widget.DrawerLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/terminal_toolbar_view_pager"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="37.5dp"
            android:background="@color/terminal_toolbar_background"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <View
        android:id="@+id/activity_fable_bottom_space_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent" />

</com.gph.fable.app.terminal.FableActivityRootView>
